--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 
 <body>
     <script src="./index.js"></script>
+    <div class="container">
+        <div class="row justify-content-around">
+            <div class="col-md-6">
+                <div id="encrypt-block">
+                    <h3>Введите текст: </h3>
+                    <textarea name="user-text" id="text-to-work" cols="40" rows="3"></textarea>
+                    <br><br>
+                    <div class="form-group">
+                        <button class="btn btn-primary" id="encrypt-btn">Зашифровать</button>
+                        <button class="btn btn-primary" id="decrypt-btn">Дешифровать</button>
+                        <button class="btn btn-danger" id="btn-reset">Очистить</button>
+                    </div>
+                    <h4>Шаг сдвига:</h4>
+                    <select name="user_step" id="encrypt-step" size="1">
+                        <option>1</option>
+                        <option>2</option>
+                        <option selected>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
+                        <option>11</option>
+                        <option>12</option>
+                        <option>13</option>
+                        <option>14</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h3>Результат:</h3>
+                <textarea readonly id="output" cols="40" rows="3"></textarea>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
