--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,12 @@
-
-
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>scrammle!</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/jquery-migrate-1.4.1.js"></script>
-    <script src="js/scripts.js"></script>
-  </head>
-  <body>
-
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <script src="./index.js"></script>
+</body>
 </html>
