--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" class="text">
+    <input type="file" id="file">
+    <button class="first">Шифрование</button>
+    <button class="second">Розшифровка</button>
+    <div class="out"></div>
+    <div class="out2"></div>
     <script src="./index.js"></script>
 </body>
 </html>
