--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div>
+        <input type="text" class="in">
+        <button class="encrypto">Шифровать</button>
+        <button class="decrypto">Дешифровать</button>
+    </div>
     <script src="./index.js"></script>
 </body>
 
