--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <script src="js/jquery-3.6.0.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="./index.js"></script>
   <title>Cipher</title>
 </head>
 <body>
